feat: full demo preview and CV updates

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -228,22 +228,22 @@
       "softSkills": "المهارات الناعمة",
       "languages": "اللغات"
     },
-    "executiveSummary": "?????? ????????"
+    "executiveSummary": "ملخص تنفيذي"
   },
   "resumeAnalyzer": {
     "title": "محلل السيرة الذاتية",
-    "subtitle": "???? ???? ??? ???? ????? ?? ??? ?????? ???????.",
-    "analyze": "????? ???? ???? ?????",
-    "reanalyze": "????? ????? ??????",
+    "subtitle": "ملخص يركز على نقاط القوة في هذا السيرة الذاتية.",
+    "analyze": "إنشاء ملخص نقاط القوة",
+    "reanalyze": "إعادة إنشاء الملخص",
     "loading": "جارٍ تحليل السيرة الذاتية...",
-    "completeness": "??? ????? ??????",
-    "atsScore": "???? ????????",
-    "sections": "???? ??? ???? ?????",
+    "completeness": "قوة الملف الشخصي",
+    "atsScore": "جاهزية ATS",
+    "sections": "نظرة عامة على نقاط القوة",
     "gaps": "أبرز الإنجازات",
     "noHighlights": "سيتم توليد الإنجازات المتميزة مع التحليل الكامل.",
     "strengths": "نقاط القوة",
-    "improvements": "????????? ??????",
-    "overall": "?????? ????????",
+    "improvements": "معززات القيمة",
+    "overall": "ملخص تنفيذي",
     "error": "حدث خطأ أثناء تحليل السيرة الذاتية. حاول مرة أخرى.",
     "sectionNames": {
       "personal": "المعلومات الشخصية",
@@ -256,29 +256,29 @@
     }
   },
   "skillRecommender": {
-    "title": "تعزيز نقاط القوة",
-    "subtitle": "إبراز مهارات CV الموجودة",
-    "generate": "إنشاء الإبراز",
-    "regenerate": "إعادة الإنشاء",
-    "loading": "جاري تحليل نقاط القوة...",
-    "recommended": "نقاط قوة رئيسية",
-    "trends": "إشارات السوق",
-    "advice": "التموضع",
-    "difficulty": "العمق",
+    "title": "القيم الشخصية ونقاط القوة",
+    "subtitle": "اكتشف القيم التي تجعلك فريداً كمحترف",
+    "generate": "اكتشف القيم",
+    "regenerate": "إعادة التحليل",
+    "loading": "جاري تحليل القيم الشخصية...",
+    "recommended": "القيم الرئيسية",
+    "trends": "لماذا هي مهمة",
+    "advice": "عامل تميزك",
+    "difficulty": "المستوى",
     "time": "الدليل",
-    "resources": "نقاط إثبات",
-    "error": "حدث خطأ أثناء إنشاء الإبرازات، حاول مرة أخرى。",
+    "resources": "أمثلة",
+    "error": "خطأ في تحليل القيم. حاول مرة أخرى.",
     "difficultyLabels": {
-      "easy": "أساسي",
-      "medium": "متقدم",
-      "hard": "خبير"
+      "easy": "واضح",
+      "medium": "قوي",
+      "hard": "استثنائي"
     }
   },
   "demo": {
-    "badge": "??? ???",
+    "badge": "معاينة عامة",
     "titlePrefix": "جرّب",
     "titleBrand": "Vitae.ai",
-    "description": "???? ????? ??????? ?????? ??? ?????? ?????? (????? 60%). ??? ??? ????? ?????? ??????? ?????? ????????? ??? ????? Vitae.ai.",
+    "description": "عرض السيرة الذاتية كاملة مع علامة مائية. بتثبيت Vitae.ai يمكنك إزالة العلامة المائية والتخصيص بالكامل.",
     "cardTitle": "أدخل معلوماتك",
     "cardSubtitle": "اختر طريقة تزويد بيانات سيرتك الذاتية",
     "tabs": {
@@ -381,7 +381,7 @@
     },
     "preview": {
       "back": "رجوع",
-      "badge": "معاينة 60%",
+      "badge": "معاينة كاملة",
       "sections": {
         "summary": "ملخص مهني",
         "skills": "مهارات بارزة",
@@ -411,13 +411,13 @@
         "projects": "مشاريع مميزة",
         "certificates": "شهادات",
         "insights": "رؤى الذكاء الاصطناعي",
-        "label": "???? ?? ??????"
+        "label": "علامة مائية تجريبية"
       },
       "cta": {
-        "title": "???? ??????? ???????",
-        "description": "???? Vitae.ai ?????? ??? ?????? ??????? ??????? ?????? ?????????.",
-        "install": "????? Vitae.ai",
-        "guide": "???? ???????"
+        "title": "هل أنت جاهز لسيرتك الذاتية الكاملة؟",
+        "description": "ثبّت Vitae.ai لفتح التخصيص الكامل بدون علامة مائية.",
+        "install": "تثبيت Vitae.ai",
+        "guide": "دليل الإعداد"
       },
       "links": {
         "linkedin": "LinkedIn",
