--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -228,22 +228,22 @@
       "softSkills": "सॉफ्ट स्किल्स",
       "languages": "भाषाएं"
     },
-    "executiveSummary": "????????????? ??????"
+    "executiveSummary": "कार्यकारी सारांश"
   },
   "resumeAnalyzer": {
     "title": "CV विश्लेषक",
-    "subtitle": "?? CV ?? ?????? ?? ???????? ???????",
-    "analyze": "?????? ?? ?????? ?????",
-    "reanalyze": "?????? ??? ?? ?????",
+    "subtitle": "इस CV की ताकतों पर केंद्रित सारांश।",
+    "analyze": "ताकतों का सार बनाएं",
+    "reanalyze": "सारांश फिर से बनाएं",
     "loading": "CV का विश्लेषण हो रहा है...",
-    "completeness": "????????? ?? ??????",
-    "atsScore": "?????? ?????",
-    "sections": "????? ?????? ?? ??????",
+    "completeness": "प्रोफ़ाइल की मजबूती",
+    "atsScore": "ATS तैयारी स्कोर",
+    "sections": "ताकतों का अवलोकन",
     "gaps": "हाइलाइट्स",
     "noHighlights": "पूर्ण विश्लेषण के साथ उत्कृष्ट उपलब्धियाँ उत्पन्न होंगी।",
     "strengths": "ताकतें",
-    "improvements": "?????? ????????????",
-    "overall": "????????????? ??????",
+    "improvements": "मूल्य-वर्धक",
+    "overall": "कार्यकारी सारांश",
     "error": "CV विश्लेषण में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "sectionNames": {
       "personal": "व्यक्तिगत जानकारी",
@@ -256,29 +256,29 @@
     }
   },
   "skillRecommender": {
-    "title": "मजबूती बृद्धि",
-    "subtitle": "CV में मौजूद कौशलों को हाइलाइट करें",
-    "generate": "हाइलाइट बनाएं",
-    "regenerate": "फिर से बनाएं",
-    "loading": "मजबूतियों का विश्लेषण चल रहा है...",
-    "recommended": "मुख्य मजबूतियाँ",
-    "trends": "मार्केट सिग्नल",
-    "advice": "पोजिशनिंग",
-    "difficulty": "गहराई",
+    "title": "व्यक्तिगत मूल्य और शक्तियां",
+    "subtitle": "उन मूल्यों को खोजें जो आपको एक पेशेवर के रूप में अद्वितीय बनाते हैं",
+    "generate": "मूल्य खोजें",
+    "regenerate": "विश्लेषण फिर से करें",
+    "loading": "व्यक्तिगत मूल्यों का विश्लेषण हो रहा है...",
+    "recommended": "मुख्य मूल्य",
+    "trends": "ये क्यों मायने रखते हैं",
+    "advice": "आपका विभेदक",
+    "difficulty": "स्तर",
     "time": "प्रमाण",
-    "resources": "प्रमाण बिंदु",
-    "error": "हाइलाइट बनाने में त्रुटि हुई। फिर से कोशिश करें।",
+    "resources": "उदाहरण",
+    "error": "मूल्यों के विश्लेषण में त्रुटि। फिर से प्रयास करें।",
     "difficultyLabels": {
-      "easy": "बेस",
-      "medium": "एडवांस्ड",
-      "hard": "एक्सपर्ट"
+      "easy": "स्पष्ट",
+      "medium": "मजबूत",
+      "hard": "असाधारण"
     }
   },
   "demo": {
-    "badge": "?????? ????",
+    "badge": "सार्वजनिक प्रीव्यू",
     "titlePrefix": "आज़माएँ",
     "titleBrand": "Vitae.ai",
-    "description": "???? CV ????? ???? ?? ???? 60% ?? ????? ???????? ????? ???? ??????????? ?? AI ???????? Vitae.ai ??????? ???? ?? ????? ??????",
+    "description": "पूरा CV दिखाया जाता है और वॉटरमार्क जोड़ा जाता है। Vitae.ai इंस्टॉल करने पर वॉटरमार्क हटाकर पूरी तरह कस्टमाइज़ कर सकते हैं।",
     "cardTitle": "अपनी जानकारी दर्ज करें",
     "cardSubtitle": "अपना CV डेटा देने का तरीका चुनें",
     "tabs": {
@@ -381,7 +381,7 @@
     },
     "preview": {
       "back": "वापस",
-      "badge": "60% पूर्वावलोकन",
+      "badge": "पूर्ण पूर्वावलोकन",
       "sections": {
         "summary": "प्रोफ़ेशनल सार",
         "skills": "हाइलाइटेड स्किल्स",
@@ -411,13 +411,13 @@
         "projects": "फीचर्ड प्रोजेक्ट्स",
         "certificates": "प्रमाणपत्र",
         "insights": "AI इनसाइट्स",
-        "label": "???? ??? ???"
+        "label": "डेमो वॉटरमार्क"
       },
       "cta": {
-        "title": "???? ????? ????? ????",
-        "description": "Vitae.ai ??????? ???? ???? ???? CV ?? AI ???????? ??? ?????",
-        "install": "Vitae.ai ??????? ????",
-        "guide": "????? ????"
+        "title": "क्या आप अपना पूरा CV चाहते हैं?",
+        "description": "Vitae.ai इंस्टॉल करके बिना वॉटरमार्क के पूरी कस्टमाइज़ेशन पाएं।",
+        "install": "Vitae.ai इंस्टॉल करें",
+        "guide": "सेटअप गाइड"
       },
       "links": {
         "linkedin": "LinkedIn",
